--- a/.tmux.conf
+++ b/.tmux.conf
@@ -14,7 +14,7 @@ bind -n C-right next
 
 # default statusbar colors
 set-option -g status-bg colour235 #base02
-set-option -g status-fg colour136 #yellow
+set-option -g status-fg colour249
 set-option -g status-attr default
 
 # default window title colors
@@ -23,21 +23,21 @@ set-window-option -g window-status-bg default
 #set-window-option -g window-status-attr dim
 
 # active window title colors
-set-window-option -g window-status-current-fg colour166 #orange
+set-window-option -g window-status-current-fg colour136 #orange
 set-window-option -g window-status-current-bg default
 #set-window-option -g window-status-current-attr bright
 
 # pane border
 set-option -g pane-border-fg colour235 #base02
-set-option -g pane-active-border-fg colour240 #base01
+set-option -g pane-active-border-fg colour235 #base01
 
 # message text
 set-option -g message-bg colour235 #base02
-set-option -g message-fg colour166 #orange
+set-option -g message-fg colour33 #blue
 
 # pane number display
 set-option -g display-panes-active-colour colour33 #blue
-set-option -g display-panes-colour colour166 #orange
+set-option -g display-panes-colour colour39 #blue
 
 # clock
 set-window-option -g clock-mode-colour colour64 #green
