--- a/.tmux.conf
+++ b/.tmux.conf
@@ -18,3 +18,7 @@ set-option -g message-fg colour33 #blue
 set-option -g display-panes-active-colour colour33 #blue
 set-option -g display-panes-colour colour39 #blue
 
+# load info
+set -g status-interval 5
+set -g status-right "#[fg=black,bg=green]#(tmux-mem-cpu-load --interval 5)#[default]"
+set -g status-right-length 60
