--- a/.tmux.conf
+++ b/.tmux.conf
@@ -18,7 +18,14 @@ set-option -g message-fg colour33 #blue
 set-option -g display-panes-active-colour colour33 #blue
 set-option -g display-panes-colour colour39 #blue
 
-# load info
-set -g status-interval 5
-set -g status-right "#[fg=black,bg=green]#(tmux-mem-cpu-load --interval 5)#[default]"
-set -g status-right-length 60
+# THEME
+set -g status-bg black
+set -g status-fg white
+#set -g window-status-current-bg white
+#set -g window-status-current-fg black
+#set -g window-status-current-attr bold
+set -g window-status-current-fg yellow
+set -g status-interval 60
+set -g status-left-length 30
+set -g status-left '#[fg=cyan](#S) #(hostname)'
+set -g status-right '#[fg=yellow]#(cut -d " " -f 1-3 /proc/loadavg)#[default] #[fg=white]%H:%M#[default]'
